--- a/FreeCodeCamp/CatPhotoApp/index.html
+++ b/FreeCodeCamp/CatPhotoApp/index.html
@@ -2,3 +2,4 @@
 <h2>CatPhotoApp</h2>
 <p>Hello Paragraph</p>
 <!-- <p>This is a commented out p tag</p> -->
+<p>Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
