--- a/FreeCodeCamp/CatPhotoApp/index.html
+++ b/FreeCodeCamp/CatPhotoApp/index.html
@@ -15,7 +15,7 @@
   <ul>
     <li>flea treatment</li>
     <li>thunder</li>
-    <li>other cats</li>
+    <li>other cat</li>
   </ul>
   <input type="text" placeholder="cat photo URL">
 </main>
