--- a/FreeCodeCamp/CatPhotoApp/index.html
+++ b/FreeCodeCamp/CatPhotoApp/index.html
@@ -17,6 +17,8 @@
     <li>other cats</li>
   </ol>
   <form action="/submit-cat-photo">
+    <label><input type="radio" name="indoor-outdoor">indoor</label>
+    <label><input type="radio" name="indoor-outdoor">outdoor</label><br>
     <input type="text" placeholder="cat photo URL" required>
     <button type="submit">Submit</button>
   </form>
