--- a/Codecademy/a-MakeAWebsite/index.html
+++ b/Codecademy/a-MakeAWebsite/index.html
@@ -6,9 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<h1>BLAH BLAH BALH YAEH</h1>
-  <video width="320" height="240" controls>
-  <source src="video-url.mp4" type="video/mp4">
+	<h1>BLAH BLAH BALH YAEH</h1>m
 </video>
 </body>
 </html>
+ 
