--- a/Codecademy/-Ready/test.html
+++ b/Codecademy/-Ready/test.html
@@ -8,8 +8,21 @@
 </head>
 
 <body>
-  <p>The quick brown fox <span>jumps</span> over the lazy dog.</p>
+<img src="http://www.truffle-tree.co.uk/files/2013/07/dog-training_gourmetattitude-1600x1200.jpg" alt="cute puppy" width="200" />&ensp;
+<img src="http://4.bp.blogspot.com/-l6jJTD9lli0/T7EjG451ZSI/AAAAAAAAAj8/uC8BxTLBy2A/s1600/kitty+cat+pictures+5.jpg" alt="hello kitty cat" width="200" />
+<img src="http://2.bp.blogspot.com/-epS9S3gpwdY/UptfLUzQSJI/AAAAAAAAFYM/QBJoc6cTJhQ/s1600/Cats-Wearing-Clothes-pic.jpg" alt="cat doing a hi-five" width="300" />
+<img src="http://www.yeepet.com/includes/fckeditor/editorimages/Image/photo-op.jpg" alt="cat bunny"width="400" />
 
-  <p style="background-color:blue;">a</p><p>b</p><p>c</p>
+<video src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4" autoplay poster="posterimage.jpg" width="320" height="240" controls loop></video>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/uh4dTLJ9q9o" frameborder="0" allowfullscreen></iframe>
+
+<a href="http://www.roblox.com" target="_blank">Roblox</a><br>
+<a href="http://www.google.com">Google</a><br>
+<a href="http://www.codecademy.com">Codecademy</a>
+
+
+
+
 </body>
 </html>
