CC Project 3 complete

--- a/HTML-Kids.html
+++ b/HTML-Kids.html
@@ -6,9 +6,10 @@
 <address><article><aside><blockquote><canvas><dd><div><dl><dt><fieldset><figcaption><figure><footer><form><h1><header><hgroup><hr><li><main><nav><noscript><ol><output><p><pre><section><table><tfoot><ul><video>
 <!-- BLOCK Element List End -->
 <!-- Space &nbsp; -->
-<!-- Emmet
+<!-- ****  Emmet  ****
 (h3+img+ol>(li>strong+em)*3)*3
 ((a>img[width="300"])*2+br)*5
+(img[width="300"][alt="Crazy Cat"]*2+br)*5
 -->
 
 <!DOCTYPE html>
